samples/_failures_safe/1761043554_f9ade7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f097a15d.c: In function ‘main’:
./samples/SAFE/__tmp_f097a15d.c:156:12: error: ‘EXIT’ undeclared (first use in this function)
  156 |     return EXIT
      |            ^~~~
./samples/SAFE/__tmp_f097a15d.c:156:12: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f097a15d.c:156:16: error: expected ‘;’ at end of input
  156 |     return EXIT
      |                ^
      |                ;
./samples/SAFE/__tmp_f097a15d.c:156:5: error: expected declaration or statement at end of input
  156 |     return EXIT
      |     ^~~~~~
